--- a/pokemon-app/angular.json
+++ b/pokemon-app/angular.json
@@ -43,11 +43,12 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "10kb",
+                  "maximumError": "15kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "/PokedexApp/"
             },
             "development": {
               "buildOptimizer": false,
