--- a/pokemon-app/package.json
+++ b/pokemon-app/package.json
@@ -29,6 +29,8 @@
     "@angular/platform-browser": "^20.2.3",
     "@angular/platform-browser-dynamic": "^20.2.3",
     "@angular/router": "^20.2.3",
+    "primeng": "^18.0.0",
+    "primeicons": "^7.0.0",
     "rxjs": "^7.8.2",
     "sass": "^1.92.0",
     "typescript": "^5.9.2",
