--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,11 +29,9 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'npm'
-        cache-dependency-path: 'pokemon-app/package-lock.json'
         
     - name: Install dependencies
-      run: cd pokemon-app && npm ci
+      run: cd pokemon-app && npm ci --legacy-peer-deps
       
     - name: Build Angular project
       run: cd pokemon-app && npm run build -- --configuration production
